Added Dialog to add users, needs more work

--- a/KetchUPClient/app/src/main/res/values/strings.xml
+++ b/KetchUPClient/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">KetchUp</string>
     <string name="settingText">Settings</string>
+    <string name="addfriendname">Search for some nice users</string>
 </resources>
